# stock_picker_nanoclaw

./: .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  stock-picker.ipynb  stock_data_retrival.ipynb  stock_picker_agents.py  stock_prediction_analyzer.html  stock_prediction_checker.ipynb  test_stock_analysis_orchestrator.ipynb
.claude/: scheduled_tasks.json
.claude/commands/: run-stock-picker.md  stock-report.md
docs/: ahnm-plan.md  ahnm-wiki-page.md  github-autosave-setup.md  iot-vlan-plan.md  journey-article.md  smw-setup-article.md
docs/_llm_cyber_newz_scaffold/: README.md
docs/_llm_cyber_newz_scaffold/editions/2026/03/: 2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-30.md
docs/_llm_cyber_newz_scaffold/editions/2026/04/: 2026-04-01.md  2026-04-02.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  (+4 more)
docs/research_papers/: stock_market_prediction_ai.md
docs/smw-setup/: Dockerfile  LocalSettings.php  add-smw-project-page.sh  bootstrap-pages.sh  docker-compose.yml  setup.sh  wiki-publish.sh
logic_tools_staging/: DEV_PLAN.md  app.py  build_cyc_index.py  cyc_index.py  docker-compose.yml  fol_engine.py  requirements.txt
projects/: README.md  requirements.txt
projects/01_watermark_windowing/: windowing_engine.py
projects/02_probabilistic/: count_min_sketch.py  hyperloglog.py
projects/03_session_aggregation/: session_aggregator.py
projects/04_incremental_view/: docker-compose.yml  seed.py
projects/05_ewma_anomaly/: ewma_anomaly.py
projects/ts_irl_cn/: README.md  ts_graph.py
tests/: test_stock_picker.py
