[project]
name = "stockpickers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupytext>=1.17.2",
    "lxml>=6.0.0",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "notebook>=7.4.5",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]
